# neural-search

./: .env.example  .gitignore  BUILD_PACKET.md  CLAUDE_CODE_MASTER_PROMPT.md  CODEX_BACKEND_CORE_PROMPT.md  Makefile  README.md  README_TEMPLATE.md  WHITEPAPER_UPDATE_SUMMARY.md  alembic.ini  behavioral_task_ontology.yaml  benchmark_queries.yaml  docker-compose.yml  manifest.json  neural_search_ecc_next_phase_instructionset.xml  neural_search_repo_whitepaper_audit.md  neural_search_v06_instructionset.xml  neural_search_v0_3_claude_codex_instructionset.xml  neural_search_v0_4_claude_codex_instruct.xml  neural_search_whitepaper_critique_and_claude_instructions.md  pyproject.toml  scholarpedia_neural_search_kg_integration_brief.md
artifacts/: benchmark_queries.jsonl  known_item_queries.jsonl  qrels_bronze.jsonl  qrels_silver.jsonl
benchmarks/: hard_negative_queries.yaml
config/: affordance_rubric.yaml  query_senses.yaml
docs/: ADVERSARIAL_BENCHMARK_RATIONALE.md  AI_RESEARCH_WORKFLOW_ROADMAP.md  ANALYSIS_AFFORDANCE_TAXONOMY.md  ARCHITECTURE_V05.md  CHANGELOG_V0_7.md  CLAIM_LEDGER.md  CODEX_V0_6_UPDATE_LOG.md  CORPUS_EXPANSION_SPRINT.md  CURRENT_SYSTEM_MAP.md  DEVELOPMENT_ROADMAP.md  EMBEDDING_MODEL_STRATEGY.md  EXPERIMENTAL_DESIGN_GRAPH.md  EXPERIMENTGLANCER_SCENE_CONTRACT.md  GRAPH_AUGMENTED_SEARCH.md  GRAPH_MIGRATION_PLAN.md  HANDOFF_V05.md  HUMAN_AUDIT_PROTOCOL.md  HUMAN_RELEVANCE_LABELING_PROTOCOL.md  KNOWLEDGE_GRAPH_SCHEMA.md  LATENT_SEARCH_V0_3_ROADMAP.md  LATENT_USEFULNESS_IMPLEMENTATION_NOTES.md  LATENT_USEFULNESS_OPTIMIZATION.md  NEURAL_SEARCH_EXPANSION_PLAN.md  NEXT_PHASE_DEVELOPMENT_PLAN.md  NEXT_PHASE_PLAN.md  NORMALIZED_CORPUS_SCHEMA.md  OBSIDIAN_EVAL_MEMORY.md  PEER_VALIDATION_PROTOCOL.md  QUERY_INTENT_AND_FIELD_ROUTING.md  REAL_CORPUS_V07_RUNBOOK.md  RECORDING_SCALE_AND_REGION_INDEXING.md  RELEASE_NOTES_TEMPLATE.md  REMAINING_IMPLEMENTATION_WORK.md  REPRODUCIBILITY_CAPSULE.md  SCIENTIFIC_LABEL_EXTRACTION_RULES.md  TASK_10_RELEASE_AND_PRODUCT_HARDENING_PLAN.md  TASK_11_EMBEDDING_EVOLUTION.md  TASK_12_SEMANTIC_NEUROSCIENCE_SEARCH.md  TASK_13_GENERAL_NEUROSCIENCE_SEARCH_INTELLIGENCE.md  TASK_14_AWARENESS_INTEGRATED_RETRIEVAL.md  (+50 more)
infra/: Dockerfile.api  Dockerfile.web
migrations/: env.py
neural_search/: __init__.py  analysis_affordances.py  cli.py  contracts.py  db.py  enrich_corpus.py  extraction.py  http_utils.py  models.py  normalized.py  ontology.py  readiness.py  schemas.py  scientific_labels.py  source_quality.py  species.py
neural_search_handoff_kit/: 00_REPO_EVALUATION.md  01_NEXT_STEPS_ROADMAP.md  README_HANDOFF.md
neural_search_paper_upgrade_package/: 01_paper_expansion_instructions.md  02_experiment_and_validation_roadmap.md  03_latex_overleaf_fixes.md  04_claude_paper_revision_prompt.md  05_codex_experiment_implementation_prompt.md  06_master_instruction_spec.xml  07_experiments_manifest.yaml  08_related_work_sources_to_verify.md  09_reputation_checklist.md  README.md
neural_search_whitepaper_and_roadmap_package/: neural_search_improvement_validation_plan.docx  neural_search_v09_claude_codex_specs.xml  neural_search_whitepaper.docx
reports/: ablation_v08.md  affordance_validation_v1.md  architecture_connectivity_audit_2026-07-01.md  baseline_v09.json  benchmark_baseline_v0_2.json  benchmark_baseline_v0_2.md  corpus_quality.md  graph_ablation.json  killer_demo.json  methodology_coverage_report.md  neural_search_v0.2_improvements.md  optimized_weights_v11.json  real_corpus_v11_eval_report.json  real_corpus_v11_eval_report.md  reanalysis_candidates_report.md  reanalysis_insight_report.md  repository_cleanup_proposal_2026-07-01.md  top_suggestions_validation_report.md  turbovec_recall.json  usefulness_benchmark_v08.md  usefulness_correlation_v09.json
scripts/: ablate_graph_proximity.py  annotate_qrels_fast.py  annotate_usefulness.py  auto_label_linkage.py  build_artifact_manifest.py  build_field_embedding_index.py  build_real_corpus_graph.py  build_turbovec_index.py  check_paper_retraction_status.py  compare_versions.py  coverage_report.py  dedup_corpus.py  demo.py  demo_latent_search.py  embed_flat_corpus.py  enrich_task_coverage.py  evaluate_usefulness_correlation.py  expand_corpus_tier1.py  expand_corpus_tier2.py  expand_corpus_to_seed.py  expand_dandi_corpus.py  expand_openneuro_corpus.py  expand_paper_corpus.py  expand_real_corpus.py  export_clean_repo.sh  extract_neural_signatures.py  freeze_baseline.py  generate_annotation_candidates.py  (+27 more)
(+1565 files in other folders)
